--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -33,7 +33,7 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11747591.md#1" target="_blank">讣告误传拆散“凤凰” 她题诗铭志终续姻缘</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/26/n11747591.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/PK2A003-150x120.jpg" align ="left"></a>明朝时期，有一个人和卢瀚同名同姓，但那人不幸去世了，卜告消息误传到扬州。卢妻以为夫君去世，不禁悲痛欲绝。后来，她在金山寺璧题写一首诗，使得两人再续夫妻之缘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/11/27/n3441553.md#1" target="_blank">《枕中记》梦境之启示</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/11/11/27/n3441553.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/11/101226184059100445-150x120.jpg" align ="left"></a>李白曾说：“浮生若梦。”人生有如一场梦。在梦中之人觉得梦中全数皆是真实的，可当梦醒后才发觉仅是虚幻之梦而已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769243.md#1" target="_blank">许其正：船</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769243.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/078e6bdacc4e67066cf9cf9e4adf0741-150x120.jpg" align ="left"></a> 船航行着，在海上。  是船就必须在海上航行。  它从此岸航行到彼岸，从一个港口航行到另一个港口......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:08 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777442.md#1" target="_blank">诗歌：韵满弓刀</a><br></h3> 风利如刀月满弓， 云长若带缚红龙。 除魔笔上冲天鹤， 古韵行间啸铁骢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 11:27 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769198.md#1" target="_blank">台湾古典诗：冬笋</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769198.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/02/1302100010002532-150x120.jpg" align ="left"></a> 满汉时馐小八珍，雪霜无畏绿痕新， 但教孝感天怜见，破土龙孙好飨亲。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 3:57 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774989.md#1" target="_blank">七绝：响雪</a><br></h3> 雪落三更响玉声， 雄鸡骤起九千鸣。 风摇树挂悬银剑， 横扫人间路不平！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/7/n11774926.md#1" target="_blank">七律：寄白居易</a><br></h3> 作诗如话多深味，愁唱醉吟悲抚桐。 杨柳千姿舞腰细，樱桃一点似唇红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772770.md#1" target="_blank">诗歌：咏雪二首</a><br></h3> 一 玉殿琼楼下九重， 千树梨花舞寒风。 谁说严冬欠佳色， 银装素裹也怡情！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:34 AM			</td></tr>
